Fix mini project alignment

--- a/src/components/MiniProjects.css
+++ b/src/components/MiniProjects.css
@@ -11,3 +11,8 @@
 .mini-projects-links {
   padding-top: 10px;
 }
+
+.mini {
+  width: 100%;
+  margin-top: 100px;
+}
